--- a/pybo_project/templates/pybo/question_detail.html
+++ b/pybo_project/templates/pybo/question_detail.html
@@ -3,3 +3,16 @@
 <div>
     {{ question.content }}
 </div>
+<h5>{{ question.answer_set.count }}개의 답변이 있습니다.</h5> <!-- 답변의 총개수를 의미 -->
+<div>
+    <ul>
+        {% for answer in question.answer_set.all %}
+            <li>{{ answer.content }}</li>
+        {% endfor %}
+    </ul>
+</div>
+<form action="{% url 'pybo:answer_create' question.id %}" method="post"> <!-- 답변등록 버튼-->
+    {% csrf_token %} <!--보안-->
+    <textarea name="content" id="content" rows="15"></textarea>
+    <input type="submit" value="답변등록">
+</form>
