--- a/pybo_project/templates/pybo/question_detail.html
+++ b/pybo_project/templates/pybo/question_detail.html
@@ -1,3 +1,5 @@
+{% load static %} <!-- 템플릿 최상단에 태그 필요 -->
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 <h1>{{ question.subject }}</h1>
 
 <div>
