--- a/pybo_project/templates/pybo/question_list.html
+++ b/pybo_project/templates/pybo/question_list.html
@@ -1,9 +1,41 @@
-{% if question_list %} <!--question_list가 있다면-->
-    <ul>
-    {% for question in question_list %}
-        <li><a href="{% url 'pybo:detail' question.id %}/">{{ question.subject}}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>질문이 없습니다.</p>
-{% endif %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+
+<div class="container my-3">
+    <table class="table">
+        <thead>
+        <tr class="thead-dark">
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if question_list %}
+        {% for question in question_list %}
+        <tr>
+            <td>{{ forloop.counter }}</td> <!-- forloop의 현재 순서를 의미 -->
+            <td>
+                <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+            </td>
+            <td>{{ question.create_date }}</td>
+        </tr>
+        {% endfor %}
+        {% else %}
+        <tr>
+            <td colspan="3">질문이 없습니다.</td>
+        </tr>
+        {% endif %}
+        </tbody>
+    </table>
+</div>
+
+<!--{% if question_list %} &lt;!&ndash;question_list가 있다면&ndash;&gt;-->
+<!--    <ul>-->
+<!--    {% for question in question_list %}-->
+<!--        <li><a href="{% url 'pybo:detail' question.id %}/">{{ question.subject}}</a></li>-->
+<!--    {% endfor %}-->
+<!--    </ul>-->
+<!--{% else %}-->
+<!--    <p>질문이 없습니다.</p>-->
+<!--{% endif %}-->
