--- a/pybo_project/templates/pybo/question_list.html
+++ b/pybo_project/templates/pybo/question_list.html
@@ -1,5 +1,5 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container my-3">
     <table class="table">
@@ -28,7 +28,9 @@
         {% endif %}
         </tbody>
     </table>
+    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
+{% endblock %}
 
 <!--{% if question_list %} &lt;!&ndash;question_list가 있다면&ndash;&gt;-->
 <!--    <ul>-->
