--- a/exerciseproject/workapp/templates/exercise3.html
+++ b/exerciseproject/workapp/templates/exercise3.html
@@ -6,13 +6,19 @@
     }
     textarea {
         font-size : 20px;
-<!--        font-weight : bold;-->
+        font-weight : bold;
+        border : solid 2px gray;
+        border-radius : 5px;
+    }
+    input[type=text] {
+        font-size : 20px;
+        font-weight : bold;
         border : solid 2px gray;
         border-radius : 5px;
     }
     input {
         font-size:16px;
-<!--        font-weight : bold;-->
+        font-weight : bold;
         border : solid 2px gray;
         border-radius : 5px;
     }
@@ -23,10 +29,10 @@
         <h2>{{ info.info2 }}</h2>
     {% else %}
         <h1>글 작성하기</h1><HR>
-        <form method="post" action="http://localhost:8000/workapp/exercise3/">
+        <form name="id" method="post" action="http://localhost:8000/workapp/exercise3/">
             {% csrf_token %}
-            <textarea placeholder="작성자 이름을 입력하세요" name="name" rows="1" cols="30"></textarea><br><br>
-            <textarea placeholder="자신의 의견을 간단히 작성하세요"name="memo" rows="10" cols="60"></textarea><br>
+            <input type="text" name="name" placeholder="작성자 이름을 입력하세요"  rows="1" cols="30"></input><br><br>
+            <textarea  name="memo" placeholder="자신의 의견을 간단히 작성하세요" rows="10" cols="60"></textarea><br>
             <input type="submit" value="제출">
             <input type="reset" value="재작성">
         </form>
